@@ -488,7 +488,7 @@ to set user preferences.",
 'previousrevision' => "←Fyrri útgáfa",
 'prevn' => "síðustu $1",
 'printableversion' => "Prentvæn útgáfa",
-'printsubtitle' => "(From http://is.wikipedia.org)",
+'printsubtitle' => "(From {{SERVER}})",
 'protect' => "Vernda",
 'protectcomment' => "Ástæða",
 'protectedpagewarning' => "<!-- -->",
