@@ -902,7 +902,7 @@ pentru a-ţi putea salva preferinţele.",
 'previewnote' => "Reţine că aceasta este doar o previzualizare - articolul încă nu este salvat! Trebuie să apeşi butonul \"Salvează pagina\" de sub caseta de editare pentru a salva. Nu uita să introduci şi o descriere sumară a modificărilor!",
 'prevn' => "anterioarele $1",
 'printableversion' => "Versiune tipărire",
-'printsubtitle' => "(De la http://ro.{{SITENAME}}.org)",
+'printsubtitle' => "(De la {{SERVER}})",
 'protect' => "Protejare",
 'protectcomment' => "Motiv pentru protejare",
 'protectedarticle' => "protejat [[$1]]",
