@@ -244,7 +244,7 @@ $wgValidSpecialPagesSv = array(
 "viewcount"             => "Den här sidan har visats $1 gånger.",
 "copyright"	        => "Innehåll tillgängligt under $1.",
 "poweredby"	        => "{{SITENAME}} körs med hjälp av [http://www.mediawiki.org/ MediaWiki], en öppen källkods-wikimotor.",
-"printsubtitle"         => "(Från http://sv.wikipedia.org)",
+"printsubtitle"         => "(Från {{SERVER}})",
 "protectedpage"         => "Skyddad sida",
 "administrators"        => "Wikipedia:Administratörer",
 "sysoptitle"            => "Sysop-behörighet krävs",
