@@ -334,6 +334,7 @@ Various bugfixes, small features, and a few experimental things:
 * (bug 996) Replace $wgWhitelistEdit with 'edit' permission; fixup UPGRADE
   documentation about edit and read whitelists.
 * (bug 2515) Fix incremental link table update
+* Removed some wikipedia-specifica from LanguageXx.php's
 
 === Caveats ===
 
